--- a/Sample/Sample/Base.lproj/Main.storyboard
+++ b/Sample/Sample/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tGf-ny-vfq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Sza-Ql-yZF">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -614,7 +614,68 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Agm-pE-eDe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="160.86956521739131" y="-28.125"/>
+            <point key="canvasLocation" x="110" y="341"/>
+        </scene>
+        <!--Home View Controller-->
+        <scene sceneID="Zup-Sb-gLn">
+            <objects>
+                <viewController storyboardIdentifier="HomeViewController" id="Sza-Ql-yZF" customClass="HomeViewController" customModule="Sample" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yqj-Pl-l3W">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UkF-Le-Sto">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uo6-HE-okO">
+                                        <rect key="frame" x="0.0" y="16" width="414" height="77"/>
+                                        <subviews>
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="I7h-X9-8Us">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="77"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hdY-zn-ChU">
+                                                    <size key="itemSize" width="128" height="128"/>
+                                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                </collectionViewFlowLayout>
+                                                <cells/>
+                                            </collectionView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="I7h-X9-8Us" secondAttribute="bottom" id="9Ux-tn-XmL"/>
+                                            <constraint firstItem="I7h-X9-8Us" firstAttribute="leading" secondItem="uo6-HE-okO" secondAttribute="leading" id="9rv-sO-Nwb"/>
+                                            <constraint firstAttribute="trailing" secondItem="I7h-X9-8Us" secondAttribute="trailing" id="mIZ-4Y-WJz"/>
+                                            <constraint firstItem="I7h-X9-8Us" firstAttribute="top" secondItem="uo6-HE-okO" secondAttribute="top" id="vEu-gR-k0p"/>
+                                            <constraint firstAttribute="height" constant="77" id="zzO-DI-Gia"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="uo6-HE-okO" secondAttribute="trailing" id="WpU-6w-3FD"/>
+                                    <constraint firstItem="uo6-HE-okO" firstAttribute="top" secondItem="UkF-Le-Sto" secondAttribute="top" constant="16" id="c9Q-TG-5op"/>
+                                    <constraint firstItem="uo6-HE-okO" firstAttribute="leading" secondItem="UkF-Le-Sto" secondAttribute="leading" id="i6P-yc-qGM"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="UkF-Le-Sto" firstAttribute="top" secondItem="sWL-CY-eUu" secondAttribute="top" id="DBo-PB-wb2"/>
+                            <constraint firstItem="sWL-CY-eUu" firstAttribute="trailing" secondItem="UkF-Le-Sto" secondAttribute="trailing" id="Qyp-rv-zlk"/>
+                            <constraint firstItem="UkF-Le-Sto" firstAttribute="leading" secondItem="sWL-CY-eUu" secondAttribute="leading" id="ab6-8S-TaX"/>
+                            <constraint firstItem="sWL-CY-eUu" firstAttribute="bottom" secondItem="UkF-Le-Sto" secondAttribute="bottom" id="wzR-9z-ocz"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="sWL-CY-eUu"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionViewRoomItemList" destination="I7h-X9-8Us" id="9eV-vG-UgI"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9yL-H7-Cjm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1119" y="-28"/>
         </scene>
     </scenes>
     <resources>
